--- a/img/index.html
+++ b/img/index.html
@@ -24,15 +24,10 @@
         <nav>
             <ul>
                 <li><a href="#gin">Gin's</a></li>
-                <hr>
                 <li><a href="#fernet">Fernet</a></li>
-                <hr>
                 <li><a href="#vinos">Vinos</a></li>
-                <hr>
                 <li><a href="#">Cervezas</a></li>
-                <hr>
                 <li><a href="#">Promos</a></li>
-                <hr>
                 <li><a href="#">Cigarrillos</a></li>
             </ul>
         </nav>
@@ -56,7 +51,7 @@
             <div class="cont">
 
                 <div class="box_producto">
-                    <img src="img/gin-gordon-classic-removebg-preview.png" alt="Gin Gordon">
+                    <img src="./gin-gordon-classic-removebg-preview.png" alt="Gin Gordon">
                     <h3>Gin Gordon</h3>
                     <hr>
                     <p><span>$</span>14500</p>
@@ -64,7 +59,7 @@
                 </div>
 
                 <div class="box_producto">
-                    <img src="img/gin-gordo-classic-dos-removebg-preview.png" alt="Gin Gordon">
+                    <img src="./gin-gordo-classic-dos-removebg-preview.png" alt="Gin Gordon">
                     <h3>Gin Gordon</h3>
                     <hr>
                     <p><span>$</span>14500</p>
@@ -74,7 +69,7 @@
 
 
                 <div class="box_producto">
-                    <img src="img/gin-beefeater-removebg-preview.png" alt="Beefeater London">
+                    <img src="./gin-beefeater-removebg-preview.png" alt="Beefeater London">
                     <h3>Gin Beefeater</h3>
                     <hr>
                     <p><span>$</span>14500</p>
@@ -95,8 +90,7 @@
             <div class="cont">
 
                 <div class="box_producto">
-                    <img style="transform: rotate(2deg);" src="./img/botella-de-fernet-branca-removebg-preview.png"
-                        alt="Fernet Branca">
+                    <img src="    https://imag.bonviveur.com/botella-de-fernet-branca.jpg" alt="Fernet Branca">
                     <h3>Fernet Branca</h3>
                     <hr>
                     <p><span>$</span>10200</p>
