--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
             <div class="cont">
 
                 <div class="box_producto">
-                    <img style="transform: rotate(2deg);" src="./img/botella-de-fernet-branca-removebg-preview.png"
-                        alt="Fernet Branca">
+                    <img src="./img/botella-de-fernet-branca-removebg-preview.png" alt="Fernet Branca">
                     <h3>Fernet Branca</h3>
                     <hr>
                     <p><span>$</span>10200</p>
