--- a/index.html
+++ b/index.html
@@ -136,6 +136,20 @@
                     <p><span>$</span>14200</p>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
+                <div class="box_producto">
+                    <img src="img/espera-malbec-removebg-preview.png" alt="Vino Trumpeter Malbec">
+                    <h3>La espera</h3>
+                    <hr>
+                    <p><span>$</span>14200</p>
+                    <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
+                </div>
+                <div class="box_producto">
+                    <img src="img/Mesidor_Roble_Syrah_fondo_blanco-removebg-preview.png" alt="Vino Trumpeter Malbec">
+                    <h3>Mesidor Roble Syrah</h3>
+                    <hr>
+                    <p><span>$</span>14200</p>
+                    <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
+                </div>
 
             </div>
 
