--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <h3>Gin Gordon</h3>
                     <hr>
                     <p><span>$</span>14500</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
 
@@ -68,6 +71,9 @@
                     <h3>Gin Gordon</h3>
                     <hr>
                     <p><span>$</span>14500</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-x"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
 
                 </div>
@@ -78,6 +84,9 @@
                     <h3>Gin Beefeater</h3>
                     <hr>
                     <p><span>$</span>14500</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
 
                 </div>
@@ -99,6 +108,9 @@
                     <h3>Fernet Branca</h3>
                     <hr>
                     <p><span>$</span>10200</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
 
@@ -127,6 +139,9 @@
                     <h3>Vino Toro Tinto</h3>
                     <hr>
                     <p><span>$</span>2400</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-x"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
                 <div class="box_producto">
@@ -134,6 +149,9 @@
                     <h3>Trumpeter</h3>
                     <hr>
                     <p><span>$</span>14200</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
                 <div class="box_producto">
@@ -141,6 +159,9 @@
                     <h3>La espera</h3>
                     <hr>
                     <p><span>$</span>14200</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
                 <div class="box_producto">
@@ -148,6 +169,9 @@
                     <h3>Mesidor Roble Syrah</h3>
                     <hr>
                     <p><span>$</span>14200</p>
+                    <div class="box">
+                        <p>Stock <i class="bi bi-check"></i></p>
+                    </div>
                     <a class="btn_producto" href="#">Pedir <i class="bi bi-bag"></i></a>
                 </div>
 
