--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <hr>
                 <li><a href="#vinos">Vinos</a></li>
                 <hr>
-                <li><a href="#">Cervezas</a></li>
+                <li><a href="#cervezas">Cervezas</a></li>
                 <hr>
-                <li><a href="#">Sky</a></li>
+                <li><a href="#sky">Sky</a></li>
                 <hr>
-                <li><a href="#">Promos</a></li>
+                <li><a href="#promos">Promos</a></li>
                 <hr>
-                <li><a href="#">Cigarrillos</a></li>
+                <li><a href="#cigarrillos">Cigarrillos</a></li>
             </ul>
         </nav>
 
